--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   },
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
-    "apollo-server": "^3.6.7",
-    "express": "^4.18.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.4.0",
-    "lodash": "^4.17.21"
+    "apollo-server": "3.6.7",
+    "express": "4.18.1",
+    "express-graphql": "0.12.0",
+    "graphql": "16.4.0",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.6.4"
   }
 }
