--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
   },
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
-    "apollo-server": "^3.6.7",
-    "express": "^4.18.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.4.0",
-    "lodash": "^4.17.21",
-    "onchange": "^7.1.0"
+    "apollo-server": "3.6.7",
+    "express": "4.18.1",
+    "express-graphql": "0.12.0",
+    "graphql": "16.4.0",
+    "lodash": "4.17.21",
+    "onchange": "7.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "@typescript-eslint/eslint-plugin": "5.22.0",
+    "@typescript-eslint/parser": "5.22.0",
+    "eslint": "8.14.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.6.2",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.6.4"
   }
 }
