--- a/ondoard-project/package.json
+++ b/ondoard-project/package.json
@@ -5,7 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "ts-node": "10.7.0",
-      "@types/node": "^16.11.10",
+      "@types/node": "16.11.10",
       "typescript": "4.5.2"
    },
    "dependencies": {
