--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-graphql": "0.12.0",
     "graphql": "16.4.0",
     "lodash": "4.17.21",
-    "onchange": "7.1.0"
+    "onchange": "7.1.0",
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.22.0",
