--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "graphql": "16.4.0",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
-    "reflect-metadata": "0.1.13"
+    "pg": "8.7.3",
+    "reflect-metadata": "0.1.13",
+    "typeorm": "0.3.6",
+    "uuidv4": "6.2.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.22.0",
