--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
   },
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
+    "@types/bcrypt": "5.0.0",
     "apollo-server": "3.6.7",
+    "bcrypt": "5.0.1",
+    "bcryptjs": "2.4.3",
     "express": "4.18.1",
     "express-graphql": "0.12.0",
     "graphql": "16.4.0",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
     "pg": "8.7.3",
+    "reflect-metadata": "0.1.13",
     "typeorm": "0.3.6",
-    "uuidv4": "6.2.13",
-    "reflect-metadata": "0.1.13"
+    "uuidv4": "6.2.13"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
+    "@types/jsonwebtoken": "8.5.8",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
     "eslint": "8.14.0",
@@ -43,4 +48,3 @@
     "typescript": "4.6.4"
   }
 }
-
