--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha -r ts-node/register ./src/test/index.ts",
-    "teste": "node ./test/setup.ts",
+    "test": "mocha ./src/test/index.ts",
     "start": "node ./src/index.ts",
     "dev": "ts-node-dev ./src/index.ts",
     "prettier-watch": "onchange 'src/index.ts' -- prettier --write {{changed}}"
@@ -24,11 +23,10 @@
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
     "apollo-server": "3.6.7",
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "bcrypt": "5.0.1",
     "bcryptjs": "2.4.3",
     "express": "4.18.1",
-    "express-graphql": "0.12.0",
     "graphql": "16.4.0",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
@@ -42,7 +40,7 @@
     "@types/bcrypt": "5.0.0",
     "@types/chai": "4.3.1",
     "@types/jsonwebtoken": "8.5.8",
-    "@types/mocha": "^9.1.1",
+    "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
     "chai": "4.3.6",
