--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
-     "lib": [
-        "es5",
-        "es6"
-     ],
-     "target": "es5",
+     "target": "es2021",
      "module": "commonjs",
      "moduleResolution": "node",
      "esModuleInterop": true,
      "outDir": "./build",
+     "rootDir": "./",
      "emitDecoratorMetadata": true,
      "experimentalDecorators": true,
      "sourceMap": true,
