--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha -r ts-node/register ./src/test/index.ts",
-    "teste": "node ./test/setup.ts",
+    "test": "mocha ./src/test/index.ts",
     "start": "node ./src/index.ts",
     "dev": "ts-node-dev ./src/index.ts",
     "prettier-watch": "onchange 'src/index.ts' -- prettier --write {{changed}}"
@@ -25,9 +24,9 @@
   "dependencies": {
     "apollo-server": "3.6.7",
     "axios": "0.27.2",
+    "bcrypt": "5.0.1",
     "bcryptjs": "2.4.3",
     "express": "4.18.1",
-    "express-graphql": "0.12.0",
     "graphql": "16.4.0",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
