--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,26 @@
 {
-  "compilerOptions": {
+   "compilerOptions": {
      "target": "es2021",
      "module": "commonjs",
+     "lib": ["es2021"],
+     "sourceMap": true,
+     "outDir": "./dist",
      "moduleResolution": "node",
+     "removeComments": true,
+     "noImplicitAny": true,
+     "strict": true,
+     "noImplicitThis": true,
+     "noUnusedLocals": true,
+     "noUnusedParameters": true,
+     "noImplicitReturns": true,
+     "noFallthroughCasesInSwitch": true,
+     "allowSyntheticDefaultImports": true,
      "esModuleInterop": true,
-     "outDir": "./build",
-     "rootDir": "./",
      "emitDecoratorMetadata": true,
      "experimentalDecorators": true,
-     "sourceMap": true,
+     "resolveJsonModule": true,
      "baseUrl": "./src"
-  }
-}
+   },
+   "exclude": ["node_modules"],
+   "include": ["./src/**/*.ts"]
+ }
