--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
      "sourceMap": true,
      "outDir": "./dist",
      "moduleResolution": "node",
+     "noImplicitAny": false,
      "removeComments": true,
-     "noImplicitAny": true,
-     "strict": true,
+     "strict": false,
      "noImplicitThis": true,
      "noUnusedLocals": true,
      "noUnusedParameters": true,
