--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "# teste",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./src/test/index.ts",
+    "test": "mocha ./src/test/index.ts --exit",
     "start": "node ./src/index.ts",
+    "serveteste": "node ./src/test/setup.ts",
     "dev": "ts-node-dev ./src/index.ts",
     "prettier-watch": "onchange 'src/index.ts' -- prettier --write {{changed}}"
   },
