--- a/test.env
+++ b/test.env
@@ -3,3 +3,4 @@ DB_USER = raquelmms
 DB_PASS = 123abc
 DB_NAME = postgres
 PORT= 5433
+DATA_URL = postgres://raquelmms:123abc@localhost:5433/postgres
