--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "2.4.3",
     "express": "4.18.1",
     "graphql": "16.4.0",
+    "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
     "pg": "8.7.3",
@@ -35,10 +36,10 @@
     "uuidv4": "6.2.13"
   },
   "devDependencies": {
-    "@types/bcryptjs": "2.4.2",
     "@types/bcrypt": "5.0.0",
+    "@types/bcryptjs": "2.4.2",
     "@types/chai": "4.3.1",
-    "@types/jsonwebtoken": "8.5.8",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
