--- a/test.env
+++ b/test.env
@@ -1,6 +1,5 @@
-DB_HOST = localhost
-DB_USER = raquelmms
-DB_PASS = 123abc
-DB_NAME = postgres
-PORT= 5433
-DATA_URL = postgres://raquelmms:123abc@localhost:5433/postgres
+PORT= 4001
+# DATABASE_URL="<dialect>://<username>:<password>@<host>:<port>/<db_name>"
+DATA_URL = "postgres://raquelmms:123abc@localhost:5433/raquelmms_testbanco"
+
+
