--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "dependencies": {
     "apollo-server": "3.6.7",
     "axios": "0.27.2",
-    "bcryptjs": "2.4.3",
     "express": "4.18.1",
     "graphql": "16.4.0",
+    "bcrypt": "5.0.1",
+    "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
     "pg": "8.7.3",
@@ -35,8 +36,6 @@
     "uuidv4": "6.2.13"
   },
   "devDependencies": {
-    "@types/bcryptjs": "2.4.2",
-    "bcrypt": "5.0.1",
     "@types/bcrypt": "5.0.0",
     "@types/chai": "4.3.1",
     "@types/jsonwebtoken": "8.5.8",
