--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "onchange": "7.1.0",
     "pg": "8.7.3",
     "reflect-metadata": "0.1.13",
+    "sinon": "^14.0.0",
     "typeorm": "0.3.6",
     "uuidv4": "6.2.13"
   },
@@ -40,6 +41,7 @@
     "@types/chai": "4.3.1",
     "@types/jsonwebtoken": "8.5.8",
     "@types/mocha": "9.1.1",
+    "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
     "chai": "4.3.6",
