Revert "Feature/test validation"

--- a/test.env
+++ b/test.env
@@ -1,5 +1,5 @@
-PORT= 4001
-# DATABASE_URL="<dialect>://<username>:<password>@<host>:<port>/<db_name>"
-DATA_URL = "postgres://raquelmms:123abc@localhost:5433/raquelmms_testbanco"
-
-
+DB_HOST = localhost
+DB_USER = raquelmms
+DB_PASS = 123abc
+DB_NAME = raquelmms_test
+PORT= 4000
