--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "# teste",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "mocha ./src/test/index.ts --exit",
+    "test": "mocha ./src/test/index.ts",
     "start": "node ./src/index.ts",
     "dev": "ts-node-dev ./src/index.ts",
     "prettier-watch": "onchange 'src/index.ts' -- prettier --write {{changed}}"
@@ -22,6 +21,7 @@
   },
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
+    "@types/bcrypt": "5.0.0",
     "apollo-server": "3.6.7",
     "axios": "0.27.2",
     "bcryptjs": "2.4.3",
@@ -41,6 +41,7 @@
     "@types/chai": "4.3.1",
     "@types/jsonwebtoken": "8.5.8",
     "@types/mocha": "9.1.1",
+    "@types/jsonwebtoken": "8.5.8",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
     "chai": "4.3.6",
