--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
+    "@faker-js/faker": "^6.3.1",
+    "@types/faker": "^6.6.9",
     "apollo-server": "3.6.7",
     "axios": "0.27.2",
-    "express": "4.18.1",
-    "graphql": "16.4.0",
     "bcrypt": "5.0.1",
+    "express": "4.18.1",
+    "faker": "^6.6.6",
+    "graphql": "16.4.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "onchange": "7.1.0",
