--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   },
   "homepage": "https://github.com/indigotech/onboard-raquel-martins#readme",
   "dependencies": {
-    "@faker-js/faker": "^6.3.1",
-    "@types/faker": "^6.6.9",
     "apollo-server": "3.6.7",
     "axios": "0.27.2",
     "bcrypt": "5.0.1",
@@ -39,6 +37,8 @@
     "uuidv4": "6.2.13"
   },
   "devDependencies": {
+    "@faker-js/faker": "6.3.1",
+    "@types/faker": "6.6.9",
     "@types/bcrypt": "5.0.0",
     "@types/chai": "4.3.1",
     "@types/jsonwebtoken": "8.5.8",
