modifying users tests

--- a/test.env
+++ b/test.env
@@ -2,3 +2,4 @@ PORT= 4001
 # DATABASE_URL="<dialect>://<username>:<password>@<host>:<port>/<db_name>"
 DATA_URL = "postgres://raquelmms:123abc@localhost:5433/raquelmms_testbanco"
 SECRET = 'jujuba'
+EXPIRES_IN = '60 days'
